changed home dollar

--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -156,10 +156,10 @@
                 <h3 class="product-title"><a href="/productDetails/<%= product._id %>"><%= product.productName %></a></h3>
                 <div class="product-price">
                   <% if (product.regularPrice > product.salePrice) { %>
-                    <span class="new-price">$<%= product.salePrice %></span>
-                    <span class="old-price">Was $<%= product.regularPrice %></span>
+                    <span class="new-price"> ₹<%= product.salePrice %></span>
+                    <span class="old-price">Was  ₹<%= product.regularPrice %></span>
                   <% } else { %>
-                    $<%= product.salePrice %>
+                    ₹<%= product.salePrice %>
                   <% } %>
                 </div>
               </div>
@@ -207,10 +207,10 @@
                 <h3 class="product-title"><a href="/productDetails/<%= product._id %>"><%= product.productName %></a></h3>
                 <div class="product-price">
                   <% if (product.regularPrice > product.salePrice) { %>
-                    <span class="new-price">$<%= product.salePrice %></span>
-                    <span class="old-price">Was $<%= product.regularPrice %></span>
+                    <span class="new-price"> ₹<%= product.salePrice %></span>
+                    <span class="old-price">Was  ₹<%= product.regularPrice %></span>
                   <% } else { %>
-                    $<%= product.salePrice %>
+                    ₹<%= product.salePrice %>
                   <% } %>
                 </div>
               </div>
@@ -258,10 +258,10 @@
                 <h3 class="product-title"><a href="/productDetails/<%= product._id %>"><%= product.productName %></a></h3>
                 <div class="product-price">
                   <% if (product.regularPrice > product.salePrice) { %>
-                    <span class="new-price">$<%= product.salePrice %></span>
-                    <span class="old-price">Was $<%= product.regularPrice %></span>
+                    <span class="new-price"> ₹<%= product.salePrice %></span>
+                    <span class="old-price">Was  ₹<%= product.regularPrice %></span>
                   <% } else { %>
-                    $<%= product.salePrice %>
+                    ₹<%= product.salePrice %>
                   <% } %>
                 </div>
               </div>
@@ -293,9 +293,9 @@
                 <div class="product-body">
                   <h3 class="product-title"><a href="/product/<%= product._id %>"><%= product.productName %></a></h3>
                   <div class="product-price">
-                    <span class="new-price">$<%= product.salePrice %></span>
+                    <span class="new-price"> ₹<%= product.salePrice %></span>
                     <% if (product.regularPrice > product.salePrice) { %>
-                      <span class="old-price">Was $<%= product.regularPrice %></span>
+                      <span class="old-price">Was  ₹<%= product.regularPrice %></span>
                     <% } %>
                   </div>
                 </div>
@@ -339,10 +339,10 @@
                 <h3 class="product-title"><a href="/productDetails/<%= product._id %>"><%= product.productName %></a></h3>
                 <div class="product-price">
                   <% if (product.regularPrice > product.salePrice) { %>
-                    <span class="new-price">$<%= product.salePrice %></span>
-                    <span class="old-price">Was $<%= product.regularPrice %></span>
+                    <span class="new-price"> ₹<%= product.salePrice %></span>
+                    <span class="old-price">Was  ₹<%= product.regularPrice %></span>
                   <% } else { %>
-                    $<%= product.salePrice %>
+                    ₹<%= product.salePrice %>
                   <% } %>
                 </div>
               </div>
