--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -410,5 +410,5 @@
     });
   }
   </script>
-
+<%- include("../../views/partials/user/mobileView") %>
 <%- include("../../views/partials/user/footer") %>
